--- a/generator/index.html
+++ b/generator/index.html
@@ -34,28 +34,30 @@
   <body>
     <div class="container">
       <h1>StationIO</h1>
-      <nav class="nav nav-tabs">
-        <a
-          href="#"
-          class="nav-link active"
-          id="nav-about"
-          onclick="navTo('about')"
-          >About</a
-        >
-        <a href="#" class="nav-link" id="nav-config" onclick="navTo('config')"
-          >Configuration</a
-        >
-        <a href="#" class="nav-link" id="nav-install" onclick="navTo('install')"
-          >Install</a
-        >
-        <a
-          href="#"
-          class="nav-link"
-          id="nav-main-cpp"
-          onclick="navTo('main-cpp')"
-          >main.cpp</a
-        >
-      </nav>
+      <div class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <nav class="nav nav-tabs">
+          <a
+            href="#"
+            class="nav-link active"
+            id="nav-about"
+            onclick="navTo('about')"
+            >About</a
+          >
+          <a href="#" class="nav-link" id="nav-config" onclick="navTo('config')"
+            >Configuration</a
+          >
+          <a href="#" class="nav-link" id="nav-install" onclick="navTo('install')"
+            >Install</a
+          >
+          <a
+            href="#"
+            class="nav-link"
+            id="nav-main-cpp"
+            onclick="navTo('main-cpp')"
+            >main.cpp</a
+          >
+        </nav>
+      </div>
       <div id="stationio-about" class="stio-tab">
         <h2>What is StationIO ?</h2>
         <p>
