index.html to root directory

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 class="form-check-input"
                 name="install-station-pio"
                 id="install-station-pio"
-                placeholder="Station pio"
+                checked
               />
             </div>
           </div>
